# fbrain

./: .gitignore  CMakeLists.txt  Doxyfile.in  README  cmake_uninstall.cmake.in  index.html  install.html  style.css
Applications/: CMakeLists.txt  btk3DSuperResolution.cxx  btkAtlasBasedFiberLabeling.cxx  btkDistanceFibersKMeansApproximationClustering.cxx  btkDtiParticleFilteringTractography.cxx  btkFeatureSelection.cxx  btkGroupwiseS2SDistortionCorrection.cxx  btkImageReconstruction.cxx  btkIntersectionRegistration.cxx  btkLabelPropagation.cxx  btkNLMDenoising.cxx  btkNLMDenoising4DImage.cxx  btkODFParticleFilterTractography.cxx  btkODFStreamlineTractography.cxx  btkOutliersCorrection.cxx  btkProbabilisticSegmentationMapBasedClustering.cxx  btkRBFInterpolationS2S.cxx  btkSSL.cxx  btkSuperResolution.cxx  btkSuperResolutionFilterTest.cxx  btkSuperResolutionV2.cxx  btkTensorParticleFilterTractography.cxx  btkTensorStreamlineTractography.cxx  btkTissueSegmentation.cxx  btkTractography.cxx
Code/: CMakeLists.txt
Code/DTI/: btkDiffusionGradientTable.h  btkDiffusionGradientTable.txx
Code/Denoising/: btkNLMTool.h  btkNLMTool.txx  btkPseudoResidualsVarianceCalculator.cxx  btkPseudoResidualsVarianceCalculator.h  btkPseudoResidualsVarianceCalculator.txx
Code/Diffusion/: btkDiffusionDataset.cxx  btkDiffusionDataset.h  btkDiffusionGradientTable.h  btkDiffusionGradientTable.txx  btkDiffusionModel.cxx  btkDiffusionModel.h  btkDiffusionSequence.cxx  btkDiffusionSequence.h  btkDiffusionSequenceFileReader.cxx  btkDiffusionSequenceFileReader.h  btkDiffusionSequenceFileWriter.cxx  btkDiffusionSequenceFileWriter.h  btkDiffusionSequenceToDiffusionSignalFilter.cxx  btkDiffusionSequenceToDiffusionSignalFilter.h  btkDiffusionSignal.cxx  btkDiffusionSignal.h  btkDiffusionSlice.cxx  btkDiffusionSlice.h  btkDiffusionTensor.h  btkDiffusionTensorReconstructionFilter.cxx  btkDiffusionTensorReconstructionFilter.h  btkGradientDirection.cxx  btkGradientDirection.h  btkOrientationDiffusionFunctionModel.cxx  btkOrientationDiffusionFunctionModel.h  btkSphericalHarmonicsDiffusionDecomposition.cxx  btkSphericalHarmonicsDiffusionDecomposition.h  btkSphericalHarmonicsDiffusionDecompositionFilter.cxx  btkSphericalHarmonicsDiffusionDecompositionFilter.h  btkSphericalHarmonicsDiffusionDecompositionReconstructionFilter.cxx  btkSphericalHarmonicsDiffusionDecompositionReconstructionFilter.h  btkTensorModel.cxx  btkTensorModel.h  btkWeightedEstimationBase.cxx  btkWeightedEstimationBase.h  btkWeightedEstimationFilter.cxx  btkWeightedEstimationFilter.h
Code/DtiParticleFilteringTractography/: btkDTFPAPrioriDensity.cxx  btkDTFPAPrioriDensity.h  btkDTFPImportanceDensity.cxx  btkDTFPImportanceDensity.h  btkDTFPLikelihoodDensity.cxx  btkDTFPLikelihoodDensity.h  btkDTFPParticle.cxx  btkDTFPParticle.h  btkDTFPParticleFilter.cxx  btkDTFPParticleFilter.h  btkDTFPSignal.cxx  btkDTFPSignal.h  btkDTFPSignalExtractor.cxx  btkDTFPSignalExtractor.h
Code/FeatureSelection/: btkFeatureSelectionAlgorithm.cxx  btkFeatureSelectionAlgorithm.h  btkFeatureSelectionCommandIterationUpdate.h  btkFeatureSelectionCostFunction.cxx  btkFeatureSelectionCostFunction.h  btkGreedyFeatureSelectionAlgorithm.cxx  btkGreedyFeatureSelectionAlgorithm.h  btkNadarayaWatsonReconstructionErrorFunction.cxx  btkNadarayaWatsonReconstructionErrorFunction.h
Code/Image/: btkOrientedRASImage.h
Code/ImageFilters/: btkApplyTransformToImageFilter.h  btkApplyTransformToImageFilter.txx  btkCropImageUsingMaskFilter.h  btkCropImageUsingMaskFilter.txx  btkMaskImageFilter.h  btkMaskImageFilter.txx  btkMidwayImageEqualization.h  btkMidwayImageEqualization.txx  btkPandoraBoxCostFunction.h  btkPandoraBoxCostFunction.txx  btkPandoraBoxImageFilters.h  btkPandoraBoxImageFilters.txx  btkPandoraBoxReconstructionFilters.h  btkPandoraBoxReconstructionFilters.txx  btkPandoraBoxRegistrationFilters.h  btkPandoraBoxRegistrationFilters.txx  btkPandoraBoxTransform.h  btkPandoraBoxTransform.txx  btkResampleImagesToBiggestImageFilter.h  btkResampleImagesToBiggestImageFilter.txx  btkResolutionSamplerFilter.h  btkSimplex.h  (+5 more)
Experimental/: CMakeLists.txt  btk3DImageAffineRegistration.cxx  btkDicomSeriesTo3DImage.cxx  btkDummy.cxx  btkDwiReconstruction.cxx  btkPatchAnalysis.cxx  btkSSL.cxx  btkSSL2.cxx  btkToto.cxx
Scripts/: CMakeLists.txt  btkAffineTools.py  btkAtlasData.py  btkCreateLongitudinalAtlas.py  btkCreateTemplate.py  btkGaussianKernel.py  btkMaskExtraction.py  btkMaskExtractionProcess.py  btkPatientsTools.py  btkPrepareAtlasData.py
Tests/: CMakeLists.txt  btkDiffusionSequenceTest.cxx  btkPSFTest.cxx  btkRegistrationTest.cxx  btkSmartGradientDescentOptimizerTest.cxx
Utilities/: CMakeLists.txt  btkAffineWeightedSum.cxx  btkApplyAffineTransformToFibers.cxx  btkApplyMaskToImage.cxx  btkApplyRegionGrow.cxx  btkApplyTransformToDiffusionSequence.cxx  btkApplyTransformationToImage.cxx  btkAverage3DImages.cxx  btkAverageImagesWithReference.cxx  btkBinarizeLabels.cxx  btkBinarizeMask.cxx  btkBinarizeTissueProbabilityMaps.cxx  btkChangeImageOrientation.cxx  btkColorFiberTractsByMeanOrientation.cxx  btkColorFiberTractsByOrientation.cxx  btkComputeChamferDistance.cxx  btkComputeCoefficientOfDeterminationForAtlas.cxx  btkComputeCoefficientOfDeterminationtForAtlas.cxx  btkComputeCurvature.cxx  btkComputeDistanceBetweenAffineTransforms.cxx  btkComputeDistanceBetweenImages.cxx  btkComputeFeatureSelectionResiduals.cxx  btkComputeJacobian.cxx  btkComputeOverlap.cxx  btkComputeSoftMaskUsingOrthogonalImages.cxx  btkComputeStatisticsOverMultipleROI.cxx  btkConvertFSLTransform.cxx  btkConvertGradientTable.cxx  btkConvertToTXT.cxx  btkCostFunctionTest.cpp  btkCreate4DEmptyImageFromReferenceImage.cxx  btkCreateMarkupListFromSelectedFeatures.cxx  btkCropImageUsingMask.cxx  btkDWIBaselineImageExtractor.cxx  btkDWIImageExtractor.cxx  btkDifferentialBiasCorrection.cxx  btkDiffusionScalarMeasurement.cxx  btkDistanceBetweenBinaryImages.cxx  btkDistanceFibersKMeansApproximationClustering.cxx  btkExtendMaskToImage.cxx  (+62 more)
Viewer/: CMakeLists.txt  btkDiffusionViewer.cxx  btkMRIViewer.cxx  btkSlicesMotionViewer.cxx
(+1602 files in other folders)
